objects/grax__GRAX_Schedule_Process__c.object
<CustomObject>
    <description>This object is the record which will be executed to back up/archive records from Salesforce. This record contains the objects, schedule frequency, start time, etc. of the back up/archive process.</description>
    <fields>
        <fullName>grax__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if this process is active/inactive</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Archive_Override_Approved_By__c</fullName>
        <description>Name of the “Running User” that confirmed this functionality</description>
        <label>Archive Override Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this an “Archive” process</description>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Bulk_Formula_Field_Backup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Formula Field Backup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Bulk_Highest_Progress__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bulk Highest Progress</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__Bulk_Status__c</fullName>
        <label>Bulk Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__Bulk_Timestamp__c</fullName>
        <label>Bulk Timestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__Can_Delete_GRAX_Records__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <formula>NOT(grax__Is_Running__c)</formula>
        <label>Can Delete GRAX Records?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Date_Field__c</fullName>
        <description>Date_Field</description>
        <inlineHelpText>Salesforce field on the selected object from which the Start &amp; End Dates are being used</inlineHelpText>
        <label>Date Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__Delete_Children_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On an &quot;Archive&quot; process, when this field is checked, the Parent record would not be deleted from Salesforce, but would be backed up with the other records in the hierarchy.</description>
        <label>Delete Children Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Error_Message__c</fullName>
        <description>Error_Message</description>
        <inlineHelpText>Description of the Error message received</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>grax__Execution_Unique_Key_Helper__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <label>Execution Unique Key Helper</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__Execution_Unique_Key__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <label>Execution Unique Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__Frequency_Type__c</fullName>
        <description>Picklist used to set how often this process will run</description>
        <label>Frequency Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>grax__Frequency_Value__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <label>Frequency Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__GRAX_Async_Objects_Status_Report_Id__c</fullName>
        <description>Field that will be filled with the &quot;GRAX Async Objects Status Report&quot; Id by trigger when a Scheduled Process is Created.</description>
        <label>GRAX Async Objects Status Repor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__GRAX_Async_Objects_Status_Report_Link__c</fullName>
        <description>Field that will be filled with the URL to the report corresponding to the Scheduled Process that was running.</description>
        <formula>IF (NOT(ISBLANK(grax__GRAX_Async_Objects_Status_Report_Id__c)), IF(NOT($User.UIThemeDisplayed=&quot;Theme4d&quot;), HYPERLINK(&apos;/&apos; &amp; grax__GRAX_Async_Objects_Status_Report_Id__c &amp; &apos;?pv0=&apos; &amp; Name, &quot;Async Objects Status Report Link&quot;,&quot;_blank&quot;), HYPERLINK(&apos;/lightning/r/Report/&apos; &amp; grax__GRAX_Async_Objects_Status_Report_Id__c &amp; &apos;/view?fv0=&apos; &amp; Name, &quot;Async Objects Status Report Link&quot;,&quot;_blank&quot;)), &apos;&apos;)</formula>
        <label>GRAX Async Objects Status Report Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__GRAX_Error_Report_Id__c</fullName>
        <description>Field that will be filled with the &quot;GRAX Error Report&quot; Id by trigger when a Scheduled Process is Created.</description>
        <label>GRAX Error Report Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__GRAX_Error_Report_Link__c</fullName>
        <description>Field that will be filled with the URL to the report corresponding to the Scheduled Process that was running.</description>
        <formula>IF (NOT(ISBLANK(grax__GRAX_Error_Report_Id__c)), IF(NOT($User.UIThemeDisplayed=&quot;Theme4d&quot;), HYPERLINK(&apos;/&apos; &amp; grax__GRAX_Error_Report_Id__c &amp; &apos;?pv0=&apos; &amp; Name, &quot;Error Report Link&quot;,&quot;_blank&quot;), HYPERLINK(&apos;/lightning/r/Report/&apos; &amp; grax__GRAX_Error_Report_Id__c &amp; &apos;/view?fv0=&apos; &amp; Name, &quot;Error Report Link&quot;,&quot;_blank&quot;)), &apos;&apos;)</formula>
        <label>GRAX Error Report Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__GRAX_Summary_Link__c</fullName>
        <description>Link to the summary of the Scheduled Process</description>
        <formula>HYPERLINK( $Setup.grax__GRAXSettings__c.grax__GRAX_Flow_URL__c + &quot;/grax-app/grax-data-lake/generateBackupSummary/&quot; + CASESAFEID(Id) + &quot;/&quot; + SUBSTITUTE( grax__Execution_Unique_Key__c, &apos;/&apos;, &apos;%2F&apos;) + &quot;?orgid=&quot; + CASESAFEID( $Organization.Id) , &quot;Summary Link&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GRAX Summary Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__Include_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field Used for Internal Auditing</description>
        <label>Include Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__IsAsyncGroupGDRBackup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Define if the Group Data Records related logic must be used to backup the relevant Salesforce records</description>
        <label>IsAsyncGroupGDRBackup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Is_Multi_Object_Date_Range_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Multi-Object Date Range Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Is_Running__c</fullName>
        <description>Field used to determine if the current Scheduled Process is in a &quot;running&quot; state</description>
        <formula>ISPICKVAL (grax__Status__c, &quot;Running&quot;) ||
ISPICKVAL (grax__Status__c, &quot;Finding Data&quot;) ||
ISPICKVAL (grax__Status__c, &quot;Backing Up Data&quot;) ||
ISPICKVAL (grax__Status__c, &quot;Aborting&quot;) ||
ISPICKVAL (grax__Status__c, &quot;Sending data to GRAX&quot;)  ||
ISPICKVAL (grax__Status__c, &quot;Waiting Files Backup to Complete&quot;)  ||
ISPICKVAL (grax__Status__c, &quot;Deleting Salesforce records&quot;)  ||
ISPICKVAL (grax__Status__c, &quot;Pending send data to GRAX&quot;)  ||
ISPICKVAL (grax__Status__c, &quot;Starting Archive Process&quot;)</formula>
        <label>Is Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Is_Single_Object_Backup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to allow the user to select only one object on the table in the &quot;Object(s) Backup&quot; tab. When this checkbox is in true and the user selects an object from the table the other checkboxes will remain disabled until the current object is unselected.</description>
        <label>Is Single Object Backup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__JobId__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <label>JobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__Last_Run_Date__c</fullName>
        <description>Last Date this process successfully ran</description>
        <inlineHelpText>Last time this Scheduled Process was run</inlineHelpText>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax__Last_Start_Time__c</fullName>
        <description>Last Date/Time this process started</description>
        <label>Last Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax__Max_of_Records_to_Delete__c</fullName>
        <label>Max # of Records to Delete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__Name__c</fullName>
        <description>Name of the Scheduled Process</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__Next_Run_Date__c</fullName>
        <description>Next date/time this Scheduled Process will execute</description>
        <inlineHelpText>Next date/time this Scheduled Process will execute</inlineHelpText>
        <label>Next Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax__Num_Records_Errors_Lkp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Num Records Errors Lkp</label>
        <referenceTo>grax__GRAX_Helper__c</referenceTo>
        <relationshipLabel>Num Records Errors Lkps</relationshipLabel>
        <relationshipName>Num_Records_Errors_Lkps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>grax__Num_Records_Errors__c</fullName>
        <description>Total # records with errors from this process</description>
        <formula>grax__Num_Records_Errors_Lkp__r.grax__Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Records Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__Num_Records_Sent_Lkp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Num Records Sent Lkp</label>
        <referenceTo>grax__GRAX_Helper__c</referenceTo>
        <relationshipLabel>Num Records Sent Lkps</relationshipLabel>
        <relationshipName>Num_Records_Sent_Lkps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>grax__Num_Records_Sent__c</fullName>
        <description>Total # records sent to GRAX</description>
        <formula>grax__Num_Records_Sent_Lkp__r.grax__Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Records Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__Num_Records_To_Send_Lkp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Num Records To Send Lkp</label>
        <referenceTo>grax__GRAX_Helper__c</referenceTo>
        <relationshipLabel>Num Records To Send Lkps</relationshipLabel>
        <relationshipName>Num_Records_To_Send_Lkps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>grax__Num_Records_To_Send__c</fullName>
        <description>Total # of records to send to GRAX</description>
        <formula>grax__Num_Records_To_Send_Lkp__r.grax__Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Records To Send</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__Number_of_Retry_Sending_Data_Records__c</fullName>
        <label>Number of Retry Sending Data Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__Object_Name__c</fullName>
        <description>Name of the object(s) being processed</description>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__Progressive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a &quot;progressive&quot;/incremental Scheduled Process</description>
        <label>Incremental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Rolling_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rolling Date set for true/false</description>
        <label>Rolling Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__SchedJobAsyncAliveLastCheck__c</fullName>
        <description>The last date, and, time, that at least one GRAX Data Record, that belongs to an &quot;Async Group GDR Backup&quot; Process, was properly verified that it was backed-up in GRAX</description>
        <label>Sched Job Async Alive Last Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax__Schedule_Type__c</fullName>
        <description>Schedule_Type</description>
        <inlineHelpText>Frequency of when the Scheduled Process will run</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Once</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>grax__Select_Criteria__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <label>Select Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Main Object not modified</fullName>
                </value>
                <value>
                    <fullName>Main Object and Children not modified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>grax__Send_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if notifications will be sent to users</description>
        <label>Send Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Start_Time__c</fullName>
        <description>Start Time of the Scheduled Process</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax__Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Finding Data</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Pending send data to GRAX</fullName>
                </value>
                <value>
                    <fullName>Sending data to GRAX</fullName>
                </value>
                <value>
                    <fullName>Completed - Errors sending data</fullName>
                </value>
                <value>
                    <fullName>Backing Up Data</fullName>
                </value>
                <value>
                    <fullName>Completed - Errors Backing Up Data</fullName>
                </value>
                <value>
                    <fullName>Starting Archive Process</fullName>
                </value>
                <value>
                    <fullName>Deleting Salesforce records</fullName>
                </value>
                <value>
                    <fullName>Completed - Errors deleting records</fullName>
                </value>
                <value>
                    <fullName>Waiting Files Backup to Complete</fullName>
                </value>
                <value>
                    <fullName>Error Backing Up Files to Storage</fullName>
                </value>
                <value>
                    <fullName>Aborting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>grax__Target_End_Datetime__c</fullName>
        <description>Date/Time from the field value in the &quot;Date Field&quot; from when this Scheduled Process will end.</description>
        <inlineHelpText>Date/Time from the field value in the &quot;Date Field&quot; from when this Scheduled Process will end.</inlineHelpText>
        <label>Target End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax__Target_Report__c</fullName>
        <description>ID of the Salesforce report used for this process</description>
        <inlineHelpText>ID of the Salesforce report used for this process</inlineHelpText>
        <label>Target Report</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__Target_Start_Datetime__c</fullName>
        <description>Date/Time from the field value in the &quot;Date Field&quot; from when this Scheduled Process will begin.</description>
        <inlineHelpText>Date/Time from the field value in the &quot;Date Field&quot; from when this Scheduled Process will begin.</inlineHelpText>
        <label>Target Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax__Times_retried__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Times retried</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__Total_Objects_Processed__c</fullName>
        <description>Total # of objects processed within this Scheduled Process</description>
        <label>Total Objects Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__Total_Objects_To_Process__c</fullName>
        <description>Total # of objects to be processed within this Scheduled Process</description>
        <label>Total Objects To Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__Total_Records_Errors__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total # records with errors from this process</description>
        <label>Total Records Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__Total_Records_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total # records sent to GRAX</description>
        <label>Total Records Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__Total_Records_To_Send__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total # of records to send to GRAX</description>
        <label>Total Records To Send</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__Use_Bulk_API__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Bulk API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__currentChildElementIndex__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <label>currentChildElementIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__currentElementIndexIteration__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <label>currentElementIndexIteration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__currentElementIndexTotalIterations__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <label>currentElementIndexTotalIterations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__currentElementIndex__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <label>currentElementIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__of_Times_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of tries of this record from SF. Max of 5 attempts</description>
        <label># of Times Sent</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__type__c</fullName>
        <description>Schedule Process type</description>
        <label>type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hierarchy</fullName>
                    <default>true</default>
                    <label>Hierarchy</label>
                </value>
                <value>
                    <fullName>Multi-Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GRAX Schedule Process</label>
    <nameField>
        <displayFormat>GRAX-Proc-{0000000}</displayFormat>
        <label>GRAX Schedule Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAX Schedule Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>